feat(explain-plan): adding docs tests and controller